# yadro-test-task

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp  src.cmake  time.cpp  time.hpp
src/club/: club.cpp  club.hpp
src/event_handler/: event_handler.cpp  event_handler.hpp
src/scope_guard/: scope_guard.cpp  scope_guard.hpp
src/time/: time.cpp  time.hpp
tests/: CMakeLists.txt  test_events.cpp  test_time.cpp
tests/input/: events.txt  time.txt
